tests/negative/test_attr_type_not_type.orb
fnc main () () {
    sym (x \():\foo);
};